@@ -2994,3 +2994,11 @@
 	year = {1955}
 }
 
+@techreport{AERODYN-UG-2002,
+	author = {David J. Laino and A. Craig Hansen},
+	title = {User's Guide to the Wind Turbine Aerodynamics Computer Software {AeroDyn}},
+	year = {2002},
+	note = {Version 12.50},
+	institution = {NREL}
+}
+
